Graph is correctly located (though too large)

--- a/style/index.css
+++ b/style/index.css
@@ -9,3 +9,9 @@
   justify-content: center;
   text-align: center;
 }
+
+.jp-graphContainerWidget canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
